[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/PlayerC.png" type="Texture" id=1]
[ext_resource path="res://Assets/PlayerB.png" type="Texture" id=2]
[ext_resource path="res://Assets/PlayerA.png" type="Texture" id=3]
[ext_resource path="res://UI/Selector.gd" type="Script" id=4]
[ext_resource path="res://Assets/Background.png" type="Texture" id=5]
[ext_resource path="res://Assets/AtariFontFullVersion-ZJ23.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[node name="Selector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 896.0
margin_bottom = 480.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "SELECT YOUR SHIP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerA" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_right = 100.0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerB" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -100.0
margin_right = 50.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="PlayerC" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 3

[connection signal="pressed" from="PlayerA" to="." method="_on_PlayerA_pressed"]
[connection signal="pressed" from="PlayerB" to="." method="_on_PlayerB_pressed"]
[connection signal="pressed" from="PlayerC" to="." method="_on_PlayerC_pressed"]
